kubernetes/kubernetes/main/apps/home-automation/home-assistant/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: homeassistant
  name: homeassistant
  namespace: home-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      volumes:
        - name: ha-storage
          persistentVolumeClaim:
            claimName: ha-pvc
      containers:
        - image: ghcr.io/home-assistant/home-assistant:2025.12.4
          name: home-assistant
          volumeMounts:
            - mountPath: "/config"
              name: ha-storage
