kubernetes/kubernetes/main/apps/home-automation/home-assistant/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ha-ingress
  namespace: home-automation
  annotations:
    gethomepage.dev/description: Home Automation
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Home
    gethomepage.dev/icon: home-assistant.png
    gethomepage.dev/name: HomeAssistant
    gethomepage.dev/pod-selector: "app=homeassistant"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: ca-server-cluster-issuer
    cert-manager.io/common-name: ha.internal
spec:
  tls:
    - hosts:
        - ha.internal
      secretName: ha-ing-cert
  ingressClassName: nginx
  rules:
  - host: ha.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ha
            port:
              number: 8123
